--- a/assets/en/css/style.css
+++ b/assets/en/css/style.css
@@ -13,3 +13,16 @@ main {
 .avatar {
     width: 100%;
 }
+
+@keyframes slideInFromLeft {
+    0% {
+        opacity: 0;
+    }
+    100% {
+        opacity: 1;
+    }   
+}
+  
+.page {  
+    animation: 1s ease-in-out 0s 1 slideInFromLeft;    
+}
