--- a/assets/ua/css/style.css
+++ b/assets/ua/css/style.css
@@ -1,5 +1,5 @@
 main {
-    background-image: url(../assets/ua/images/ornament.png);
+    background-image: url(../images/ornament.png);
     background-position: left bottom;
     background-repeat: repeat; 
 }
